Ticket: #FT-810 SubTicket: # Component: Changes: 1.Fixed Bug - Filter and 'Submit New Request' are overlapped in Detail View.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/page.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/page.less
@@ -87,7 +87,7 @@ body {
 			width: 100%;
 
 			.desktop-header {
-				height: 56px;
+				height: auto;
 				border-bottom: 2px solid #f2f2f2;
 				padding: 0 16px;
 				font-family: "SourceSansPro-SemiBold";
